--- a/accounts/tracker.css
+++ b/accounts/tracker.css
@@ -10,6 +10,10 @@
 
 @media (min-width: 577px) {}
 
+/* Medium devices (tablets, 768px and up) -- Switches over to one column */
+@media (min-width: 768px) { 
+    
+}
 
 @media (max-width: 992px) { 
     #expedited-ground:before,  #trucking:before, #domestic-air-freight:before, #customized-services:before{
@@ -140,8 +144,10 @@ h5 {
     width: 8em;
     height: 8em;
     content: '';
-    background-image: url("http://pinegrow.com/placeholders/img10.jpg");
+    background-image: url("../images/service icons/image 2.png");
     z-index: 2;
+    background-size: 115% !important;
+    background-position: center center !important;
     background-size: cover;
     box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.6);
     -moz-border-radius: 50%;
@@ -156,9 +162,10 @@ h5 {
     width: 8em;
     height: 8em;
     content: '';
-    background-image: url("http://pinegrow.com/placeholders/img10.jpg");
+    background-image: url("../images/service icons/image 3-1.png");
     z-index: 2;
-    background-size: cover;
+    background-size: 115%;
+    background-position: center center;
     box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.6);
     -moz-border-radius: 50%;
     -webkit-border-radius: 50%;
@@ -218,4 +225,14 @@ h5 {
 h4 {
     font-style: normal;
     font-weight: normal;
+}
+
+.services-row .col-md-6 {
+    margin-top: 50px;
+    margin-bottom: 25px;
+}
+
+.explore-text {
+    margin-top: 75px;
+    margin-bottom: 100px;
 }
