--- a/accounts/tracker.css
+++ b/accounts/tracker.css
@@ -255,6 +255,10 @@ h5 {
     margin-left: 30%;
 }
 
+.services-row {
+   
+}
+
 .services-row .col-md-6 .card {
     box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.3);
     border-radius: 50px 5px 5px 5px;
