--- a/bootstrap_theme/custom.css
+++ b/bootstrap_theme/custom.css
@@ -7652,7 +7652,14 @@ a.text-dark:hover, a.text-dark:focus {
 h1 {
   font-family: Lustria; }
 
-p, label, .btn-primary {
+p,
+label,
+.btn-primary {
   font-family: Muli; }
+
+.table {
+  background: #FAFAFA;
+  box-shadow: inset 0px 0px 2px rgba(0, 0, 0, 0.3);
+  border-radius: 6px; }
 
 /*# sourceMappingURL=custom.css.map */
