--- a/accounts/tracker.css
+++ b/accounts/tracker.css
@@ -176,6 +176,7 @@ h5 {
     margin-left: -125px;
     position: center;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
+    margin-top: 15px;
 
 }
 
@@ -336,6 +337,8 @@ h4 {
 
 .benefits-header {
     margin-bottom: 25px;
+    padding-left: 0;
+    padding-right: 0;
 }
 
 .benefits-map {
@@ -353,6 +356,10 @@ h4 {
     padding-left: 7.11%;
     padding-right: 7.11%;
     padding-top: 75px;
-    padding-bottom: 75px;
+    padding-bottom: 10px;
     background: #F6F6F6;
+}
+
+.staples-row .col-md-4 {
+    margin-bottom: 65px;
 }
