--- a/accounts/tracker.css
+++ b/accounts/tracker.css
@@ -39,12 +39,20 @@
 }
 
 /* General */
+html {
+
+}
+
 .body-container {
     padding-top: 20px;
     padding-bottom: 20px;
+
+
 }
 
-body {}
+body {
+
+}
 
 .services-row .col-lg-6 {
     padding-left: 1.46%;
@@ -198,7 +206,7 @@ h5 {
     position: center;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
     margin-top: 15px;
-
+    
 }
 
 .header-row {
