--- a/accounts/tracker.css
+++ b/accounts/tracker.css
@@ -155,7 +155,7 @@ body {
     width: 200px;
     height: 200px;
     background: #FFFFFF;
-    box-shadow: 0px 2px 20px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 2px 20px rgba(0, 0, 0, 0.22);
     border-radius: 6px;
 }
 
@@ -391,4 +391,13 @@ h4 {
 
 .staples-row .col-lg-4 {
     margin-bottom: 65px;
+}
+
+.staples-row .col-lg-4 img {
+    height: 100px;
+    margin-bottom: 20px;
+}
+
+.staples-row .col-lg-4 h3 {
+    margin-bottom: 25px;
 }
